Implement grpc client
